Bug#16297 In memory grant tables not flushed when users's hostname is ""  - In function 'handle_grant_struct' when searching the memory structures for an    entry to modify, convert all entries here host.hostname is NULL to "" and compare that    with the host passed in argument "user_from".  - A user created with hostname "" is stored in "mysql.user" table as host="" but when loaded into    memory it'll be stored as host.hostname NULL. Specifiying "" as hostname means    that "any host" can connect. Thus is's correct to turn on allow_all_hosts    when such a user is found.  - Review and fix other places where host.hostname may be NULL.